Correct Spacing
The services boxes are properly aligned now.

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -83,6 +83,7 @@ header {
 
 .main {
     background-color: #e8e2e2;
+    height: 425px;
 }
 
 #services {
@@ -95,6 +96,7 @@ header {
     text-align: center;
     background-color: #b4aeae;
     border-radius: 5%;
+    height: 350px
 }
 
 .bio a {
@@ -114,7 +116,7 @@ header {
 .description {
     color: black;
     
-}
+} 
 
 .side-bar {
     height: 2000px;
